--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "stb-model": "1.*.*",
-        "stb-router": "1.*.*",
-        "stb-keys": "1.*.*"
+        "cjs-model": "1.*.*",
+        "spa-router": "1.*.*",
+        "spa-keys": "1.*.*"
     },
     "devDependencies": {},
     "keywords": [
