--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "cjs-model": "1.*.*",
+        "cjs-emitter": "1.*.*",
         "spa-develop": "spasdk/develop",
         "spa-router": "spasdk/router"
     },
