--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "jsdoc": "jsdoc --destination doc *.js readme.md"
     },
     "dependencies": {
-        "cjs-emitter": "1.*.*",
-        "cjs-parse-query": "1.*.*",
+        "cjs-emitter": "cjssdk/emitter",
+        "cjs-parse-query": "cjssdk/parse-query",
         "spa-develop": "spasdk/develop",
         "spa-router": "spasdk/router"
     },
