--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "cjs-emitter": "cjssdk/emitter",
-        "cjs-parse-query": "cjssdk/parse-query",
+        "cjs-query": "cjssdk/query",
         "spa-develop": "spasdk/develop"
     },
     "devDependencies": {
