--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
         "jsdoc": "jsdoc --destination docs *.js readme.md"
     },
     "dependencies": {
-        "cjs-emitter": "1.*.*",
-        "cjs-query": "1.*.*",
+        "cjs-emitter": "^1.5.3",
+        "cjs-query": "^1.5.1",
         "gremlins.js": "marmelab/gremlins.js",
-        "livereload-js": "2.*.*",
-        "spa-wamp": "1.*.*"
+        "livereload-js": "^2.3.0",
+        "spa-wamp": "^1.0.0"
     },
     "devDependencies": {
         "jsdoc": "^3.5.5",
